syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_merchant_key.proto";

package io.aggregator.entity;

option java_outer_classname = "TransactionEntity";

message TransactionCreated {
  TransactionKey transaction_key = 1;
  string merchant_id = 2;
  string shop_id = 3;
  double transaction_amount = 4;
  google.protobuf.Timestamp transaction_timestamp = 5;
}

message TransactionState {
  TransactionKey transaction_key = 1;
  string merchant_id = 2;
  string shop_id = 3;
  double transaction_amount = 4;
  google.protobuf.Timestamp transaction_timestamp = 5;
}
